<resources>
    <string name="app_name">Gestion Horaires</string>

    <!-- Floating Button -->
    <string name="fab_description">Ajouter Horaire ou plage horaire</string>
    <string name="fab_export_description">Import des fiche sélèctionné</string>
    <string name="ajout_horaires_ponctuelles">Ajouter une horaire ponctuel</string>
    <string name="ajout_heure_fin">Ajouter une heure de fin</string>
    <string name="heure_fin">Heure de fin </string>

    <!-- boutons -->
    <string name="bouton_oui">Oui</string>
    <string name="bouton_non">Non</string>
    <string name="bouton_positif">OK</string>
    <string name="bouton_ajouter">Ajouter</string>
    <string name="bouton_deplcaer">Déplacer</string>
    <string name="bouton_deplacer_loc">Déplacer localisation</string>
    <string name="bouton_retour">Retour</string>
    <string name="bouton_appliquer">Appliquer</string>
    <string name="bouton_effacer">Effacer</string>
    <string name="bouton_negatif">Annuler</string>

    <!-- menu_main_tool_bar.xml -->
    <string name="filte_liste">Filtrer la liste</string>
    <string name="option_import">Importer</string>
    <string name="option_export">Exporter</string>
    <string name="option_settings">Paramètres</string>
    <string name="annuler">Annuler</string>
    <string name="recherche">Recherche par mot</string>

    <!-- Menu Contextuel -->
    <string name="option_supprimer">Supprimer</string>
    <string name="option_modifier">Modifier</string>
    <string name="option_annuler">Annuler</string>
    <string name="option_details">Détails</string>

    <!-- Aide au fonctionnement -->
    <string name="aide_recherche">Recherche</string>
    <string name="aide">Aide au fonctionnement de l\'application</string>
    <string name="titre_aide">Aide au fonctionnement de l\'application</string>
    <string name="message_aide_categorie">"
        Pour revenir en arrière:\n
        Rendez-vous dans le menu contextuel en appuyant sur les trois points en haut à droite de l’écran, Choisir l'option "RETOUR". \n
        Ajouter une catégorie : \n
        Rendez-vous dans le menu contextuel en appuyant sur les trois points en haut à droite de l’écran, Choisir l'option "AJOUTER", Renseigner les info et appuyer sur "OK". \n
        Modifier une catégorie : \n
        Effectuez un appui long sur la catégorie souhaitée, appuyez sur "MODIFIER", modifiez les informations necessaires et appuyer sur "OK". \n
        Supprimer une catégorie: \n
        Effectuez un appui long sur la catégorie souhaitée, appuyez sur "SUPPRIMER", comfirmez la suppression."
    </string>
    <string name="message_aide_localisation">"
        Pour revenir en arrière: \n
        Rendez-vous dans le menu contextuel en appuyant sur les trois points en haut à droite de l’écran, Choisir l'option "RETOUR". \n
        Ajouter un lieu géographique : \n
        Rendez-vous dans le menu contextuel en appuyant sur les trois points en haut à droite de l’écran, Choisir l'option "AJOUTER", Renseigner les info et appuyer sur "OK". \n
        Modifier un lieu géographique : \n
        Effectuez un appui long sur la catégorie souhaitée, appuyez sur "MODIFIER", modifiez les informations necessaires et appuyer sur "OK". \n
        Supprimer un lieu géographique: \n
        Effectuez un appui long sur la catégorie souhaitée, appuyez sur "SUPPRIMER", comfirmez la suppression."
    </string>
    <string name="message_aide_ponctuel">"
        Pour revenir en arrière: \n
        Méthode 1 : Rendez-vous dans le menu contextuel en appuyant sur les trois points en haut à droite de l’écran, Choisir l'option "RETOUR". \n
        Méthode 2 : Appuyez sur la flèche pointant vers la gauche, en haut à gauche de l'écran. \n
        Renseigner les informations nécessaires à l'ajout d'une fiche. Pour confirmer l'ajout de la fiche appuyez sur le bouton d'ajout en bas à droite de l'écran \n
        Vous pouvez à tout moment ajouter une horaire en appuyant sur le bouton AJOUT HORAIRE, vous pourrez alors renseigner le jour et l'heure."
    </string>
    <string name="message_aide_plage_horaire">"
        Pour revenir en arrière: \n
        Méthode 1 : Rendez-vous dans le menu contextuel en appuyant sur les trois points en haut à droite de l’écran, Choisir l'option "RETOUR". \n
        Méthode 2 : Appuyez sur la flèche pointant vers la gauche, en haut a gauche de l'écran. \n
        Renseigné les information nécessaire à l'ajout d'une fiche. Pour omfirmer l'ajout de la fiche appuyez sur le bouton d'ajout en bas a droite de l'écran \n
        Vous pouvez a tout moment ajouter une horaire en appuyant sur le boutons du jour correspondent à l'horaire voulu, vous pourrez alors renseigné la plage horaire.\n
        Pour effacer une plage horaire appuyez sur le jour correspondent au plage horaire, puis sur le bouton EFFACER, le bouton du jour redeviendra blanc et l'horaire sera effacé."
    </string>
    <string name="message_aide_main">"
        Pour Consulter la liste des plages horaires ou la liste des horaires ponctuels, appuyez sur l'onglet correspondent \n
        Pour ajouter une fiche horaire, appuyer sur le boutons d'ajout situé en bas à droite de l'écran. le type de fiche à ajouter sera déterminé par l'onglet actif. \n
        Pour accéder à la gestion des catégorie, Rendez-vous dans le menu contextuel en appuyant sur les trois points en haut à droite de l’écran et selectionnez GESTION CATEGORIE. \n
        Pour accéder à la gestion des lieux géographiques, Rendez-vous dans le menu contextuel en appuyant sur les trois points en haut à droite de l’écran et selectionnez GESTION LOCALISATION. \n
        Pour importer un fichier, Rendez-vous dans le menu contextuel en appuyant sur les trois points en haut à droite de l’écran et selectionnez l'option IMPORTER. \n
        Pour exporter un fichier JSON, Rendez-vous dans le menu contextuel en appuyant sur les trois points en haut à droite de l’écran et selectionnez l'option EXPORTER EN JSON. \n
        Pour effectuer une recherche, appuyer sur la loupe et saisissez le mot à rechercher. \n
        Pour appliquer des filtres, appuyer sur l'entonnoir a coté de la loupe et appliquez les différents filtres souhaités. \n"
    </string>

    <!-- Onglets -->
    <string name="onglet_plage_horaire">Plages Horaires</string>
    <string name="onglet_horaires_ponctuelles">Horaires Ponctuels</string>

    <!-- Intuitulé Colonne -->
    <string name="colonne_nom">Nom</string>
    <string name="colonne_information">Information</string>
    <string name="colonne_jour">Jour</string>
    <string name="colonne_horaire">Horaire</string>
    <string name="colonne_heure">Heure</string>

    <!-- Paramètre -->
    <string name="titre_boite_parametre">Paramètre</string>
    <string name="label_gestion_categorie">Gestion catégorie</string>
    <string name="label_gestion_localisation">Gestion localisation</string>
    <string name="ajout_categorie">Ajouter une catégorie</string>
    <string name="ajout_localisation">Ajouter une localisation</string>
    <string name="modifier_localisation">Modifier la localisation</string>
    <string name="modifier_categorie">Modifier la catégorie</string>
    <string name="alerte_titre">Saisie invalide</string>
    <string name="alerte_nom">Vous devez renseigner le nom.</string>
    <string name="alerte_nom_erreur">Vous ne pouvez pas enregistrer deux localisations avec le même nom.</string>
    <string name="alerte_suppression">Voulez-vous vraiment supprimer cette localisation ?</string>
    <string name="alerte_suppression_categorie">Voulez-vous vraiment supprimer cette catégorie ?</string>
    <string name="titre_alerte_conflit">Conflit ! que voulez vous faire ?</string>
    <string name="alerte_conflit">Il semble il y avoir un conflit, que voulez-vous faire ?</string>
    <string name="delete_all">Tout Supprimer</string>
    <string name="move_all">Déplacer dans une autre liste</string>
    <string name="move_all_fiche">Déplacer dans une autre catégorie</string>
    <string name="title_move_localisation">Déplacer dans une autre liste</string>
    <string name="title_parametre_categorie_ponctuel">Gestion catégorie horaire ponctuel</string>
    <string name="details">Détails</string>

    <!-- Filtre -->
    <string name="titre_boite_filtre">Selectionnez les filtres</string>
    <string name="filtre_localisation">Lieu géographique</string>
    <string name="filtre_categorie">Catégorie</string>
    <string name="filtre_open">Uniquement ouvert</string>

    <!-- Toast -->
    <string name="toast_localisation_defaut">Vous ne pouvez pas supprimer la localisation par défaut.</string>
    <string name="toast_categorie_defaut_modifier">Vous ne pouvez pas modifier la catégorie par défaut.</string>
    <string name="toast_categorie_defaut_supprimer">Vous ne pouvez pas supprimer la catégorie par défaut.</string>

    <!-- Exportation et Importation -->
    <string name="titre_boite_export">Quel type d\'export voulez-vous effectuez ?</string>
    <string name="titre_boite_import">Quel type d\'import voulez-vous effectuez ?</string>
    <string name="toast_erreur_sms">Vous n\'avez pas d\'application SMS par defaut</string>
    <string name="label_export_sms">Export par SMS</string>
    <string name="label_export_json">Export en JSON</string>
    <string name="label_export_json_mail">Export par Mail</string>
    <string name="label_export_json_nfc">Export par NFC</string>
    <string name="label_import_csv">Importation par CSV</string>
    <string name="label_import_json">Importation par JSON</string>

    <!-- Plage horaire -->
    <string name="titre_ajout_plage_horaire">Ajouter une plage horaire</string>
    <string name="image">Image</string>
    <string name="horaire_matin">Matin</string>
    <string name="horaire_aprem">Aprés-midi</string>
    <string name="bouton_camera">Camera</string>
    <string name="label_jour_entier">Jour Entier</string>
    <string name="label_2_plage_h">2 plages horaires</string>
    <string name="horaire_ouverte">Horaire d\'ouverture</string>
    <string name="horaire_fermer">Fermé</string>

    <!-- jour semaine -->
    <string name="bouton_lundi">Lundi</string>
    <string name="bouton_mardi">Mardi</string>
    <string name="bouton_mercredi">Mercredi</string>
    <string name="bouton_jeudi">Jeudi</string>
    <string name="bouton_vendredi">Vendredi</string>
    <string name="bouton_samedi">Samedi</string>
    <string name="bouton_dimanche">Dimanche</string>

    <!-- Toast -->
    <string name="toast_pas_de_nom">Vous devez saisir un nom.</string>
    <string name="toast_pas_de_categorie">Cette localisation ne possède pas de catégorie.</string>
    <string name="erreur_ouverture">Impossible de lire le fichier</string>
    <string name="erreur_heure">L\'heure de début doit être inférieure à l\'heure de fin.</string>
    <string name="import_terminee">Importation terminée.</string>
    <string name="export_terminee">Exportation terminée.</string>

    <!-- Horaires Ponctuel -->
    <string name="titre_detail_plage_horaire">Ajout d\'une fiche d\'horaires ponctuels</string>
    <string name="fab_ajout_fiche">Ajouter la fiche</string>
    <string name="fab_ajout_fiche_description">Ajout d\'une fiche d\'horaires ponctuels</string>
    <string name="ajout_horaire_ponctuel">Ajout Horaire</string>
    <string name="update_horaire_ponctuel">Modifier l\'horaire ponctuel</string>
    <string name="toast_champs_vides">Vous devez saisir les horaires.</string>

    <!-- Toast erreur  -->
    <string name="json_err_ouverture">Une erreur c\'est produite durant l\' ouverture du fichier</string>
    <string name="json_err_creation">>Une erreur c\'est produite durant la création du JSON></string>
    <string name="json_err_ecriture">Une erreur c\'est produite durant l\'ecriture du fichier</string>

</resources>
