<?xml version="1.0" encoding="utf-8"?>
<!--  menu contextuel de l'application TempsCuisson (permet de supprimer une cuisson -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".MainActivity"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/aide"
		android:title="@string/aide"
		android:icon="@drawable/ic_baseline_help_outline_24"
		android:orderInCategory="1"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/deplacer"
		android:title="@string/bouton_deplacer_loc"
		app:showAsAction="never" />
	<item
		android:id="@+id/ajouter"
		android:title="@string/bouton_ajouter"
		app:showAsAction="never" />
	<item
		android:id="@+id/retour"
		android:title="@string/bouton_retour"
		app:showAsAction="never" />
	<item
		android:id="@+id/annuler_option"
		android:title="@string/annuler"
		app:showAsAction="never" />
</menu>
