<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fiche_ponctuel_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_heigth"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="@style/toolBarStyle"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_heigth"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titre_ajout"
            style="@style/titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titre_detail_plage_horaire"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_nom"
                    style="@style/element_left"
                    android:layout_marginTop="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colonne_nom" />

                <EditText
                    android:id="@+id/editText_nom"
                    style="@style/element_right"
                    android:layout_width="@dimen/width_edt_text"
                    android:layout_height="wrap_content"
                    android:hint="@string/colonne_nom"
                    android:maxLines="1"
                    android:inputType="text"/>
            </TableRow>
            <TableRow
                android:layout_marginTop="@dimen/marge_normale">
                <TextView
                    android:id="@+id/label_localisation"
                    style="@style/element_left"
                    android:layout_marginTop="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filtre_localisation" />

                <Spinner
                    android:id="@+id/spinner_localisation"
                    style="@style/element_right"
                    android:layout_marginTop="0dp"
                    android:layout_width="@dimen/width_spinner"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:layout_marginTop="@dimen/marge_normale">
                <TextView
                    android:id="@+id/label_categorie"
                    style="@style/element_left"
                    android:layout_marginTop="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filtre_categorie" />

                <Spinner
                    android:id="@+id/spinner_categorie"
                    style="@style/element_right"
                    android:layout_marginTop="0dp"
                    android:layout_width="@dimen/width_spinner"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/ajout_horaire_ponctuel"
            android:onClick="ajoutHoraire"
            android:layout_marginTop="@dimen/marge_normale"
            style="@style/bouton"/>

        <ListView
            android:id="@+id/liste_horaires_ponctuel"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/marge_grande"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_ajout_fiche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/fab_ajout_fiche_description"
        android:text="@string/fab_ajout_fiche"
        android:textColor="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>