<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/plage_horaire_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_heigth"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="@style/toolBarStyle"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
            <!--                android:id="@+id/fab"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="bottom|end"-->
            <!--                android:layout_margin="@dimen/fab_margin"-->
            <!--                android:contentDescription="@string/fab_description"-->
            <!--                android:src="@drawable/fab_add_dark"-->
            <!--                app:tint="@color/white"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent" />-->

            <TextView
                android:id="@+id/titre_ajout"
                style="@style/titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titre_ajout_plage_horaire"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_nom"
                style="@style/element_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marge_tres_grande"
                android:text="@string/colonne_nom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titre_ajout" />

            <EditText
                android:id="@+id/editText_nom"
                style="@style/element_right"
                android:layout_width="@dimen/width_edt_text"
                android:layout_height="wrap_content"
                android:hint="@string/colonne_nom"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@+id/label_nom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_nom"
                app:layout_constraintTop_toTopOf="@+id/label_nom" />

            <TextView
                android:id="@+id/label_localisation"
                style="@style/element_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtre_localisation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_nom" />

            <Spinner
                android:id="@+id/spinner_localisation"
                style="@style/element_right"
                android:layout_width="@dimen/width_spinner"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/label_localisation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/label_localisation" />

            <TextView
                android:id="@+id/label_categorie"
                style="@style/element_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtre_categorie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_localisation" />

            <Spinner
                android:id="@+id/spinner_categorie"
                style="@style/element_right"
                android:layout_width="@dimen/width_spinner"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/label_categorie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/label_categorie" />

            <TextView
                android:id="@+id/label_info"
                style="@style/element_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colonne_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_categorie" />

            <EditText
                android:id="@+id/editText_info"
                style="@style/element_center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_info_heigth"
                android:hint="@string/colonne_information"
                android:maxLines="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_info" />

            <TextView
                android:id="@+id/label_image"
                style="@style/element_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_info" />

            <Button
                android:id="@+id/btn_effacer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:onClick="onClickEffacer"
                android:text="@string/bouton_effacer"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:onClick="onClickCamera"
                android:src="@drawable/ic_baseline_camera_alt_24"
                app:layout_constraintEnd_toStartOf="@+id/imageButton"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/label_image" />

            <ImageButton
                android:id="@+id/imageButton"
                style="@style/element_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:onClick="onClickGallery"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageButton2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="102dp"
                android:layout_height="97dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@+id/label_image"
                app:layout_constraintTop_toTopOf="@+id/label_image" />

            <TextView
                android:id="@+id/label_jour"
                style="@style/element_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colonne_jour"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_effacer" />

            <Button
                android:id="@+id/btn_lundi"
                style="@style/element_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:onClick="onClickjour"
                android:text="@string/bouton_lundi"
                android:textColor="@color/primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_jour" />

            <Button
                android:id="@+id/btn_mardi"
                style="@style/element_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marge_normale"
                android:backgroundTint="@color/white"
                android:onClick="onClickjour"
                android:text="@string/bouton_mardi"
                android:textColor="@color/primary"
                app:layout_constraintBottom_toBottomOf="@+id/btn_lundi"
                app:layout_constraintStart_toEndOf="@+id/btn_lundi"
                app:layout_constraintTop_toTopOf="@+id/btn_lundi" />

            <Button
                android:id="@+id/btn_mercredi"
                style="@style/element_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marge_normale"
                android:backgroundTint="@color/white"
                android:onClick="onClickjour"
                android:text="@string/bouton_mercredi"
                android:textColor="@color/primary"
                app:layout_constraintBottom_toBottomOf="@+id/btn_lundi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_mardi"
                app:layout_constraintTop_toTopOf="@+id/btn_lundi" />

            <Button
                android:id="@+id/btn_jeudi"
                style="@style/element_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:onClick="onClickjour"
                android:text="@string/bouton_jeudi"
                android:textColor="@color/primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_lundi" />

            <Button
                android:id="@+id/btn_vendredi"
                style="@style/element_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marge_normale"
                android:backgroundTint="@color/white"
                android:onClick="onClickjour"
                android:text="@string/bouton_vendredi"
                android:textColor="@color/primary"
                app:layout_constraintBottom_toBottomOf="@+id/btn_jeudi"
                app:layout_constraintStart_toEndOf="@+id/btn_jeudi"
                app:layout_constraintTop_toTopOf="@+id/btn_jeudi" />

            <Button
                android:id="@+id/btn_samedi"
                style="@style/element_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marge_normale"
                android:backgroundTint="@color/white"
                android:onClick="onClickjour"
                android:text="@string/bouton_samedi"
                android:textColor="@color/primary"
                app:layout_constraintBottom_toBottomOf="@+id/btn_vendredi"
                app:layout_constraintStart_toEndOf="@+id/btn_vendredi"
                app:layout_constraintTop_toTopOf="@+id/btn_vendredi" />

            <Button
                android:id="@+id/btn_dimanche"
                style="@style/element_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:onClick="onClickjour"
                android:text="@string/bouton_dimanche"
                android:textColor="@color/primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_jeudi" />

            <EditText
                android:id="@+id/editText_matin"
                style="@style/element_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:clickable="false"
                android:enabled="false"
                android:hint="@string/horaire_matin"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_dimanche" />

            <EditText
                android:id="@+id/editText_aprem"
                style="@style/element_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:hint="@string/horaire_aprem"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_matin" />

            <Button
                android:id="@+id/btn_ajouter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marge_grande"
                android:layout_marginEnd="@dimen/marge_tres_grande"
                android:backgroundTint="@color/secondary"
                android:onClick="onClickAjouter"
                android:text="@string/bouton_ajouter"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_aprem" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>